--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
 	margin: 0;
 	display: flex;
@@ -6,6 +8,7 @@ body {
 	align-items: center;
 	width: 100vw;
 	height: 100vh;
+	font-family: "Roboto", sans-serif;
 }
 
 main {
@@ -16,20 +19,24 @@ main {
 	width: 400px;
 	height: 500px;
 	padding: 25px;
-	background-color: cadetblue;
+	background-color: #438e96;
 	gap: 5px;
+	border-radius: 35px;
 }
 
 #display {
+	box-sizing: border-box;
 	display: flex;
 	justify-content: end;
 	align-items: center;
 	width: 100%;
 	height: 600px;
-	padding: 1px;
-	background-color: aquamarine;
+	padding: 1px 10px;
+	background-color: #325158;
+	color: white;
 	font-size: 80px;
-	box-sizing: border-box;
+	border-radius: 35px;
+	margin: 10px 0;
 }
 
 #display p {
@@ -46,4 +53,8 @@ main {
 
 .row * {
 	flex-grow: 1;
+	background-color: #5faab1;
+	color: white;
+	font-size: 32px;
+	border-radius: 50px;
 }
